fix word wrap

--- a/css/default.css
+++ b/css/default.css
@@ -95,16 +95,11 @@
 
 .post .inner {
     position:relative;
-    pointer-events: none;
-    z-index: 1;
-}
-
-.post .inner a {
-    pointer-events: all;
+	box-shadow: 0px 1px 5px rgba(77, 77, 77, 0.2);
+	cursor: pointer;
 }
 
 .buttons {
-	display: inline-block;
 	float: right;
 	font-weight: bold;
 }
